Wed Aug  2 15:27:01 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: fix call to getcvd()

Tue Aug  1 17:58:32 BST 2006 (njh)
----------------------------------
  * shared/network.c:	Now honours clamav-config.h

Tue Aug  1 12:23:43 CEST 2006 (acab)
------------------------------------
  * libclamav: includes cleanup (big thanks njh!)

Tue Aug  1 08:33:09 BST 2006 (njh)
----------------------------------
  * clamav-milter:	Honour dont-scan-on-error if the database can't be
				loaded when running in internal mode

Mon Jul 31 18:24:36 CEST 2006 (acab)
------------------------------------
  * libclamav: better error handling in pespin

Mon Jul 31 14:23:30 CEST 2006 (acab)
------------------------------------
  * libclamav: share aPLib code

Mon Jul 31 12:59:30 CEST 2006 (acab)
------------------------------------
  * libclamav: packers review

Mon Jul 31 10:24:35 BST 2006 (njh)
----------------------------------
  * libclamav/pdf.c, binhex.c:	Fixed compilation error under MSVC

Sun Jul 30 14:15:33 BST 2006 (njh)
----------------------------------
  * libclamav/message.c:	Improved handling of characters with the top
			bit set

Sun Jul 30 11:09:22 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Fixed (remote possibility) memory leak, reported
				by Torok Edvin <edwintorok*gmail.com>

Sun Jul 30 08:35:49 BST 2006 (njh)
---------------------------------
  * docs/man/clamav-milter.8:	Fix formatting errors and a typo

Fri Jul 28 19:47:39 CEST 2006 (tk)
----------------------------------
  * libclamav: fix a couple of typos in debug messages spotted by NJH

Fri Jul 28 01:08:01 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: delete patch after applying

Fri Jul 28 00:32:31 CEST 2006 (tk)
----------------------------------
  * freshclam/manager.c: better handling of status codes from remote servers
			 Thanks to Luca and Nigel

Thu Jul 27 14:21:01 CEST 2006 (tk)
----------------------------------