@@ -1,3 +1,7 @@
+Wed Aug  2 14:48:36 BST 2006 (njh)
+----------------------------------
+  * clamav-milter:	Honour DetectPhishing in clamd.conf
+
 Wed Aug  2 15:27:01 CEST 2006 (tk)
 ----------------------------------
   * freshclam/manager.c: fix call to getcvd()
